test/sh/error/oper_lhs_var_bad_type.sk
x := 0

z := x + 1.0
